## Process this file with automake to produce Makefile.in

smartsnmpdincdir = $(includedir)/smart-snmpd/mibutils

smartsnmpdinc_HEADERS =	mibcomposed.h \
			mibcontainer.h \
			mibcontaineritem.h \
			mibcontainerleaf.h \
			mibcontainertable.h \
			mibcontainertablerow.h

# currently unused - but should be integrated one fine day
noinst_HEADERS =	mibcontainertablerowtpl.h
