## Process this file with automake to produce Makefile.in

smartsnmpdincdir = $(includedir)/smart-snmpd/mibs/statgrab

smartsnmpdinc_HEADERS =	datasourcestatgrab.h \
			datasourcedaemonstatus.h \
			mibdaemonstatus.h \
			datasourceload.h \
			mibload.h \
			datasourceswapio.h \
			mibswapio.h \
			datasourcehostinfo.h \
			mibhostinfo.h \
			datasourcememory.h \
			mibmemory.h \
			datasourcecpu.h \
			mibcpu.h \
			datasourcediskio.h \
			mibdiskio.h \
			datasourcefilesystem.h \
			mibfilesystem.h \
			datasourcenetworkio.h \
			mibnetworkio.h \
			datasourceprocess.h \
			mibprocess.h \
			datasourceuserlogin.h \
			mibuserlogin.h
